notebook rerun (to be in line with slides)

--- a/coding_challenge.qmd
+++ b/coding_challenge.qmd
@@ -64,7 +64,7 @@ library(tidyverse)
 library(patchwork)
 library(tidymodels)
 tidymodels_prefer()
-library(DALEX)
+# library(DALEX)
 # library(agua)
 conflicted::conflicts_prefer(base::log10)
 conflicted::conflicts_prefer(base::`||`)
